Updated ant build script and README (with instructions on using Java 23)